--- a/booking.html
+++ b/booking.html
@@ -57,7 +57,7 @@
     <div class="container">
       <h3 class="form__title">Book Table</h3>
       <div class="form__wrapper">
-        <form action="">
+        <form name="booking form" netlify>
           <div class="form__group">
             <label for="firstName">First Name</label>
             <input type="text" name="first_name" id="firstName" required>
